logs/Slang/generated/hdlconv/hdlconvertor_p492.sv.log
name: hdlconvertor_p492
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:1:1: error: expected member
checker clocking_example (logic sig1, sig2, default_clk, rst,
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:1:62: error: expected identifier
checker clocking_example (logic sig1, sig2, default_clk, rst,
                                                             ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:2:1: error: expected declarator
event e1, e2, e3 );
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:2:6: error: expected ','
event e1, e2, e3 );
     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:2:18: error: expected declarator
event e1, e2, e3 );
                 ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:4:1: error: language feature not yet supported
default clocking @(posedge default_clk); endclocking
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:4:17: error: expected identifier
default clocking @(posedge default_clk); endclocking
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:6:1: error: language feature not yet supported
p1a: assert property (sig1 == sig2);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:7:1: error: language feature not yet supported
p1b: assert property (@(e1) (sig1 == sig2));
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:11:1: error: language feature not yet supported
p2a: assert property (sig1 == sig2);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:12:1: error: language feature not yet supported
p2b: assert property (@(e2) (sig1 == sig2));
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:16:1: error: language feature not yet supported
p3a: assert property (sig1 == sig2);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:17:1: error: language feature not yet supported
p3b: assert property (@(e3) (sig1 == sig2));
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p492.sv:19:1: error: expected member
endchecker
^~~~~~~~~~
